--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo de colores</title>
+    <title>Ejemplo parrafo de colores ...</title>
+
 </head>
+
 <body>
-    
+    <p id="parrafoInicial">Un parrafo de texto</p>
 </body>
+<script type="text/JavaScript" src="index1.js"></script>
+
 </html>
